# testmesh

./: .gitignore  CMakeLists.txt  README.md  TestMesh.sln
TestMesh/: ReadMe.txt  StdAfx.cpp  StdAfx.h  TestMesh.vcxproj  TestMesh.vcxproj.admraihsa.nvuser  TestMesh.vcxproj.filters  aabb.cpp  aabb.h  application.cpp  application.h  blurH.frag  blurH.vert  blurV.frag  blurV.vert  buffer.cpp  buffer.h  bufferLockManager.cpp  camera.cpp  camera.h  color.h  console.cpp  console.h  defaultFrag.frag  defaultVert.vert  elementBufferObject.cpp  elementBufferObject.h  eventArgs.h  eventSender.h  font.cpp  font.h  fontManager.cpp  fontManager.h  frameBuffer.cpp  frameBuffer.h  frustrum.cpp  geometry.cpp  geometry.h  glDebugger.cpp  glDebugger.h  glass.frag  (+74 more)
inc/freetype/freetype/config/: ftoption.h
inc/glm/detail/: setup.hpp
inc/octree/: array.h  array2d.h  numtraits.h  octree.h  point3d.h  shareddata.h  tinyvector.h
inc/parasolid/: frustrum_ifails.h  frustrum_tokens.h  kernel_interface.h  parasolid_debug.h  parasolid_ifails.h  parasolid_kernel.h  parasolid_tokens.h  parasolid_typedefs.h
libs/win32/: freetype.lib  freetype261.lib  freetype261r.lib  nl.lib  pskernel.lib
libs/x64/: freetype.lib  freetyped.lib
