cmake_minimum_required(VERSION 3.6)
project(testmesh)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    glTF/COLLADA2GLTF/assetModifiers/GLTFAssetModifier.h
    glTF/COLLADA2GLTF/assetModifiers/GLTFFlipUVModifier.cpp
    glTF/COLLADA2GLTF/assetModifiers/GLTFFlipUVModifier.h
    glTF/COLLADA2GLTF/convert/animationConverter.cpp
    glTF/COLLADA2GLTF/convert/animationConverter.h
    glTF/COLLADA2GLTF/convert/meshConverter.cpp
    glTF/COLLADA2GLTF/convert/meshConverter.h
    glTF/COLLADA2GLTF/dependencies/json/example/condense/condense.cpp
    glTF/COLLADA2GLTF/dependencies/json/example/pretty/pretty.cpp
    glTF/COLLADA2GLTF/dependencies/json/example/prettyauto/prettyauto.cpp
    glTF/COLLADA2GLTF/dependencies/json/example/serialize/serialize.cpp
    glTF/COLLADA2GLTF/dependencies/json/example/tutorial/tutorial.cpp
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/internal/pow10.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/internal/stack.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/internal/strfunc.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/allocators.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/document.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/encodedstream.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/encodings.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/filereadstream.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/filestream.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/filewritestream.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/prettywriter.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/rapidjson.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/reader.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/stringbuffer.h
    glTF/COLLADA2GLTF/dependencies/json/include/rapidjson/writer.h
    glTF/COLLADA2GLTF/dependencies/json/test/perftest/jsoncpptest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/perftest/misctest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/perftest/perftest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/perftest/perftest.h
    glTF/COLLADA2GLTF/dependencies/json/test/perftest/platformtest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/perftest/rapidjsontest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/perftest/ultrajsontest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/perftest/yajl_all.c
    glTF/COLLADA2GLTF/dependencies/json/test/perftest/yajltest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/documenttest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/encodedstreamtest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/encodingstest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/filestreamtest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/jsoncheckertest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/readertest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/unittest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/unittest.h
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/valuetest.cpp
    glTF/COLLADA2GLTF/dependencies/json/test/unittest/writertest.cpp
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-death-test-internal.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-filepath.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-internal.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-linked_ptr.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-param-util-generated.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-param-util.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-port.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-string.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-tuple.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/internal/gtest-type-util.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest-death-test.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest-message.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest-param-test.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest-printers.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest-spi.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest-test-part.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest-typed-test.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest_pred_impl.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/include/gtest/gtest_prod.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest-all.cc
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest-death-test.cc
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest-filepath.cc
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest-internal-inl.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest-port.cc
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest-printers.cc
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest-test-part.cc
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest-typed-test.cc
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest.cc
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/gtest/src/gtest_main.cc
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/include/json/autolink.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/include/json/config.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/include/json/features.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/include/json/forwards.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/include/json/json.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/include/json/reader.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/include/json/value.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/include/json/writer.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/src/jsontestrunner/main.cpp
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/src/lib_json/json_batchallocator.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/src/lib_json/json_reader.cpp
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/src/lib_json/json_value.cpp
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/src/lib_json/json_writer.cpp
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/src/test_lib_json/jsontest.cpp
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/src/test_lib_json/jsontest.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/jsoncpp/src/test_lib_json/main.cpp
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/ultrajson/ultrajson.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/ultrajson/ultrajsondec.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/ultrajson/ultrajsonenc.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/include/yajl/yajl_common.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/include/yajl/yajl_gen.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/include/yajl/yajl_parse.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/include/yajl/yajl_tree.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/include/yajl/yajl_version.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/api/yajl_common.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/api/yajl_gen.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/api/yajl_parse.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/api/yajl_tree.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_alloc.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_alloc.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_buf.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_buf.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_bytestack.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_encode.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_encode.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_gen.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_lex.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_lex.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_parser.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_parser.h
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_tree.c
    glTF/COLLADA2GLTF/dependencies/json/thirdparty/yajl/src/yajl_version.c
    glTF/COLLADA2GLTF/dependencies/misc/getopt.c
    glTF/COLLADA2GLTF/dependencies/misc/getopt.h
    glTF/COLLADA2GLTF/dependencies/misc/getopt_long.c
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcAdjacencyInfo.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcArithmeticCodec.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcBinaryStream.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcCommon.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcDVEncodeParams.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcDynamicVector.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcFIFO.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcIndexedFaceSet.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcSC3DMCEncodeParams.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcTimer.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcTriangleFans.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/o3dgcVector.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/src/o3dgcArithmeticCodec.cpp
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/src/o3dgcTools.cpp
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/src/o3dgcTriangleFans.cpp
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_decode_lib/inc/o3dgcDynamicVectorDecoder.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_decode_lib/inc/o3dgcSC3DMCDecoder.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_decode_lib/inc/o3dgcTriangleListDecoder.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_decode_lib/src/o3dgcDynamicVectorDecoder.cpp
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_encode_lib/inc/o3dgcDynamicVectorEncoder.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_encode_lib/inc/o3dgcSC3DMCEncoder.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_encode_lib/inc/o3dgcTriangleListEncoder.h
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_encode_lib/src/o3dgcDynamicVectorEncoder.cpp
    glTF/COLLADA2GLTF/dependencies/o3dgc/src/test/src/main.cpp
    glTF/COLLADA2GLTF/extensions/o3dgc-compression/GLTF-Open3DGC.cpp
    glTF/COLLADA2GLTF/extensions/o3dgc-compression/GLTF-Open3DGC.h
    glTF/COLLADA2GLTF/GLTF/GLTF.h
    glTF/COLLADA2GLTF/GLTF/GLTFAccessor.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFAccessor.h
    glTF/COLLADA2GLTF/GLTF/GLTFAccessorCache.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFAccessorCache.h
    glTF/COLLADA2GLTF/GLTF/GLTFAnimation.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFAnimation.h
    glTF/COLLADA2GLTF/GLTF/GLTFAsset.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFAsset.h
    glTF/COLLADA2GLTF/GLTF/GLTFBuffer.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFBuffer.h
    glTF/COLLADA2GLTF/GLTF/GLTFCleanupEvaluator.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFCleanupEvaluator.h
    glTF/COLLADA2GLTF/GLTF/GLTFConfig.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFConfig.h
    glTF/COLLADA2GLTF/GLTF/GLTFDefaultWriter.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFDefaultWriter.h
    glTF/COLLADA2GLTF/GLTF/GLTFEffect.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFEffect.h
    glTF/COLLADA2GLTF/GLTF/GLTFExtraDataHandler.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFExtraDataHandler.h
    glTF/COLLADA2GLTF/GLTF/GLTFExtras.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFExtras.h
    glTF/COLLADA2GLTF/GLTF/GLTFInputStream.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFInputStream.h
    glTF/COLLADA2GLTF/GLTF/GLTFMesh.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFMesh.h
    glTF/COLLADA2GLTF/GLTF/GLTFOutputStream.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFOutputStream.h
    glTF/COLLADA2GLTF/GLTF/GLTFPrimitive.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFPrimitive.h
    glTF/COLLADA2GLTF/GLTF/GLTFProfile.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFProfile.h
    glTF/COLLADA2GLTF/GLTF/GLTFSkin.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFSkin.h
    glTF/COLLADA2GLTF/GLTF/GLTFTypesAndConstants.h
    glTF/COLLADA2GLTF/GLTF/GLTFUtils.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFUtils.h
    glTF/COLLADA2GLTF/GLTF/GLTFWriter.cpp
    glTF/COLLADA2GLTF/GLTF/GLTFWriter.h
    glTF/COLLADA2GLTF/helpers/encodingHelpers.cpp
    glTF/COLLADA2GLTF/helpers/encodingHelpers.h
    glTF/COLLADA2GLTF/helpers/geometryHelpers.cpp
    glTF/COLLADA2GLTF/helpers/geometryHelpers.h
    glTF/COLLADA2GLTF/helpers/mathHelpers.cpp
    glTF/COLLADA2GLTF/helpers/mathHelpers.h
    glTF/COLLADA2GLTF/JSON/JSONArray.cpp
    glTF/COLLADA2GLTF/JSON/JSONArray.h
    glTF/COLLADA2GLTF/JSON/JSONNumber.cpp
    glTF/COLLADA2GLTF/JSON/JSONNumber.h
    glTF/COLLADA2GLTF/JSON/JSONObject.cpp
    glTF/COLLADA2GLTF/JSON/JSONObject.h
    glTF/COLLADA2GLTF/JSON/JSONString.cpp
    glTF/COLLADA2GLTF/JSON/JSONString.h
    glTF/COLLADA2GLTF/JSON/JSONValue.cpp
    glTF/COLLADA2GLTF/JSON/JSONValue.h
    glTF/COLLADA2GLTF/profiles/webgl-1.0/GLTFWebGL_1_0_Profile.cpp
    glTF/COLLADA2GLTF/profiles/webgl-1.0/GLTFWebGL_1_0_Profile.h
    glTF/COLLADA2GLTF/profiles/webgl-1.0/webgl-idl.h
    glTF/COLLADA2GLTF/shaders/commonProfileShaders.cpp
    glTF/COLLADA2GLTF/shaders/commonProfileShaders.h
    glTF/COLLADA2GLTF/COLLADA2GLTFExport.h
    glTF/COLLADA2GLTF/COLLADA2GLTFWriter.cpp
    glTF/COLLADA2GLTF/COLLADA2GLTFWriter.h
    glTF/COLLADA2GLTF/GitSHA1.h
    glTF/COLLADA2GLTF/GLTFOpenCOLLADA.h
    glTF/COLLADA2GLTF/GLTFOpenCOLLADAUtils.cpp
    glTF/COLLADA2GLTF/GLTFOpenCOLLADAUtils.h
    glTF/COLLADA2GLTF/main.cpp
    inc/assimp/Compiler/poppack1.h
    inc/assimp/Compiler/pstdint.h
    inc/assimp/Compiler/pushpack1.h
    inc/assimp/ai_assert.h
    inc/assimp/anim.h
    inc/assimp/camera.h
    inc/assimp/cexport.h
    inc/assimp/cfileio.h
    inc/assimp/cimport.h
    inc/assimp/color4.h
    inc/assimp/config.h
    inc/assimp/DefaultLogger.hpp
    inc/assimp/defs.h
    inc/assimp/Exporter.hpp
    inc/assimp/Importer.hpp
    inc/assimp/importerdesc.h
    inc/assimp/IOStream.hpp
    inc/assimp/IOSystem.hpp
    inc/assimp/light.h
    inc/assimp/Logger.hpp
    inc/assimp/LogStream.hpp
    inc/assimp/material.h
    inc/assimp/matrix3x3.h
    inc/assimp/matrix4x4.h
    inc/assimp/mesh.h
    inc/assimp/metadata.h
    inc/assimp/NullLogger.hpp
    inc/assimp/postprocess.h
    inc/assimp/ProgressHandler.hpp
    inc/assimp/quaternion.h
    inc/assimp/scene.h
    inc/assimp/texture.h
    inc/assimp/types.h
    inc/assimp/vector2.h
    inc/assimp/vector3.h
    inc/assimp/version.h
    inc/freetype/config/ftconfig.h
    inc/freetype/config/ftheader.h
    inc/freetype/config/ftmodule.h
    inc/freetype/config/ftoption.h
    inc/freetype/config/ftstdlib.h
    inc/freetype/internal/services/svbdf.h
    inc/freetype/internal/services/svcid.h
    inc/freetype/internal/services/svfntfmt.h
    inc/freetype/internal/services/svgldict.h
    inc/freetype/internal/services/svgxval.h
    inc/freetype/internal/services/svkern.h
    inc/freetype/internal/services/svmm.h
    inc/freetype/internal/services/svotval.h
    inc/freetype/internal/services/svpfr.h
    inc/freetype/internal/services/svpostnm.h
    inc/freetype/internal/services/svprop.h
    inc/freetype/internal/services/svpscmap.h
    inc/freetype/internal/services/svpsinfo.h
    inc/freetype/internal/services/svsfnt.h
    inc/freetype/internal/services/svttcmap.h
    inc/freetype/internal/services/svtteng.h
    inc/freetype/internal/services/svttglyf.h
    inc/freetype/internal/services/svwinfnt.h
    inc/freetype/internal/services/svxf86nm.h
    inc/freetype/internal/autohint.h
    inc/freetype/internal/ftcalc.h
    inc/freetype/internal/ftdebug.h
    inc/freetype/internal/ftdriver.h
    inc/freetype/internal/ftgloadr.h
    inc/freetype/internal/fthash.h
    inc/freetype/internal/ftmemory.h
    inc/freetype/internal/ftobjs.h
    inc/freetype/internal/ftpic.h
    inc/freetype/internal/ftrfork.h
    inc/freetype/internal/ftserv.h
    inc/freetype/internal/ftstream.h
    inc/freetype/internal/fttrace.h
    inc/freetype/internal/ftvalid.h
    inc/freetype/internal/internal.h
    inc/freetype/internal/psaux.h
    inc/freetype/internal/pshints.h
    inc/freetype/internal/sfnt.h
    inc/freetype/internal/t1types.h
    inc/freetype/internal/tttypes.h
    inc/freetype/freetype.h
    inc/freetype/ft2build.h
    inc/freetype/ftadvanc.h
    inc/freetype/ftautoh.h
    inc/freetype/ftbbox.h
    inc/freetype/ftbdf.h
    inc/freetype/ftbitmap.h
    inc/freetype/ftbzip2.h
    inc/freetype/ftcache.h
    inc/freetype/ftcffdrv.h
    inc/freetype/ftchapters.h
    inc/freetype/ftcid.h
    inc/freetype/fterrdef.h
    inc/freetype/fterrors.h
    inc/freetype/ftfntfmt.h
    inc/freetype/ftgasp.h
    inc/freetype/ftglyph.h
    inc/freetype/ftgxval.h
    inc/freetype/ftgzip.h
    inc/freetype/ftimage.h
    inc/freetype/ftincrem.h
    inc/freetype/ftlcdfil.h
    inc/freetype/ftlist.h
    inc/freetype/ftlzw.h
    inc/freetype/ftmac.h
    inc/freetype/ftmm.h
    inc/freetype/ftmodapi.h
    inc/freetype/ftmoderr.h
    inc/freetype/ftotval.h
    inc/freetype/ftoutln.h
    inc/freetype/ftpfr.h
    inc/freetype/ftrender.h
    inc/freetype/ftsizes.h
    inc/freetype/ftsnames.h
    inc/freetype/ftstroke.h
    inc/freetype/ftsynth.h
    inc/freetype/ftsystem.h
    inc/freetype/fttrigon.h
    inc/freetype/ftttdrv.h
    inc/freetype/fttypes.h
    inc/freetype/ftwinfnt.h
    inc/freetype/ftxf86.h
    inc/freetype/t1tables.h
    inc/freetype/ttnameid.h
    inc/freetype/tttables.h
    inc/freetype/tttags.h
    inc/freetype/ttunpat.h
    inc/GL/glew.h
    inc/GL/glxew.h
    inc/GL/wglew.h
    inc/glm/detail/_features.hpp
    inc/glm/detail/_fixes.hpp
    inc/glm/detail/_noise.hpp
    inc/glm/detail/_swizzle.hpp
    inc/glm/detail/_swizzle_func.hpp
    inc/glm/detail/_vectorize.hpp
    inc/glm/detail/dummy.cpp
    inc/glm/detail/func_common.hpp
    inc/glm/detail/func_exponential.hpp
    inc/glm/detail/func_geometric.hpp
    inc/glm/detail/func_integer.hpp
    inc/glm/detail/func_matrix.hpp
    inc/glm/detail/func_packing.hpp
    inc/glm/detail/func_trigonometric.hpp
    inc/glm/detail/func_vector_relational.hpp
    inc/glm/detail/glm.cpp
    inc/glm/detail/intrinsic_common.hpp
    inc/glm/detail/intrinsic_exponential.hpp
    inc/glm/detail/intrinsic_geometric.hpp
    inc/glm/detail/intrinsic_integer.hpp
    inc/glm/detail/intrinsic_matrix.hpp
    inc/glm/detail/intrinsic_trigonometric.hpp
    inc/glm/detail/intrinsic_vector_relational.hpp
    inc/glm/detail/precision.hpp
    inc/glm/detail/setup.hpp
    inc/glm/detail/type_float.hpp
    inc/glm/detail/type_gentype.hpp
    inc/glm/detail/type_half.hpp
    inc/glm/detail/type_int.hpp
    inc/glm/detail/type_mat.hpp
    inc/glm/detail/type_mat2x2.hpp
    inc/glm/detail/type_mat2x3.hpp
    inc/glm/detail/type_mat2x4.hpp
    inc/glm/detail/type_mat3x2.hpp
    inc/glm/detail/type_mat3x3.hpp
    inc/glm/detail/type_mat3x4.hpp
    inc/glm/detail/type_mat4x2.hpp
    inc/glm/detail/type_mat4x3.hpp
    inc/glm/detail/type_mat4x4.hpp
    inc/glm/detail/type_vec.hpp
    inc/glm/detail/type_vec1.hpp
    inc/glm/detail/type_vec2.hpp
    inc/glm/detail/type_vec3.hpp
    inc/glm/detail/type_vec4.hpp
    inc/glm/gtc/bitfield.hpp
    inc/glm/gtc/color_space.hpp
    inc/glm/gtc/constants.hpp
    inc/glm/gtc/epsilon.hpp
    inc/glm/gtc/integer.hpp
    inc/glm/gtc/matrix_access.hpp
    inc/glm/gtc/matrix_integer.hpp
    inc/glm/gtc/matrix_inverse.hpp
    inc/glm/gtc/matrix_transform.hpp
    inc/glm/gtc/noise.hpp
    inc/glm/gtc/packing.hpp
    inc/glm/gtc/quaternion.hpp
    inc/glm/gtc/random.hpp
    inc/glm/gtc/reciprocal.hpp
    inc/glm/gtc/round.hpp
    inc/glm/gtc/type_precision.hpp
    inc/glm/gtc/type_ptr.hpp
    inc/glm/gtc/ulp.hpp
    inc/glm/gtc/vec1.hpp
    inc/glm/gtx/associated_min_max.hpp
    inc/glm/gtx/bit.hpp
    inc/glm/gtx/closest_point.hpp
    inc/glm/gtx/color_space.hpp
    inc/glm/gtx/color_space_YCoCg.hpp
    inc/glm/gtx/common.hpp
    inc/glm/gtx/compatibility.hpp
    inc/glm/gtx/component_wise.hpp
    inc/glm/gtx/dual_quaternion.hpp
    inc/glm/gtx/euler_angles.hpp
    inc/glm/gtx/extend.hpp
    inc/glm/gtx/extented_min_max.hpp
    inc/glm/gtx/fast_exponential.hpp
    inc/glm/gtx/fast_square_root.hpp
    inc/glm/gtx/fast_trigonometry.hpp
    inc/glm/gtx/gradient_paint.hpp
    inc/glm/gtx/handed_coordinate_space.hpp
    inc/glm/gtx/hash.hpp
    inc/glm/gtx/integer.hpp
    inc/glm/gtx/intersect.hpp
    inc/glm/gtx/io.hpp
    inc/glm/gtx/log_base.hpp
    inc/glm/gtx/matrix_cross_product.hpp
    inc/glm/gtx/matrix_decompose.hpp
    inc/glm/gtx/matrix_interpolation.hpp
    inc/glm/gtx/matrix_major_storage.hpp
    inc/glm/gtx/matrix_operation.hpp
    inc/glm/gtx/matrix_query.hpp
    inc/glm/gtx/matrix_transform_2d.hpp
    inc/glm/gtx/mixed_product.hpp
    inc/glm/gtx/norm.hpp
    inc/glm/gtx/normal.hpp
    inc/glm/gtx/normalize_dot.hpp
    inc/glm/gtx/number_precision.hpp
    inc/glm/gtx/optimum_pow.hpp
    inc/glm/gtx/orthonormalize.hpp
    inc/glm/gtx/perpendicular.hpp
    inc/glm/gtx/polar_coordinates.hpp
    inc/glm/gtx/projection.hpp
    inc/glm/gtx/quaternion.hpp
    inc/glm/gtx/range.hpp
    inc/glm/gtx/raw_data.hpp
    inc/glm/gtx/rotate_normalized_axis.hpp
    inc/glm/gtx/rotate_vector.hpp
    inc/glm/gtx/scalar_multiplication.hpp
    inc/glm/gtx/scalar_relational.hpp
    inc/glm/gtx/simd_mat4.hpp
    inc/glm/gtx/simd_quat.hpp
    inc/glm/gtx/simd_vec4.hpp
    inc/glm/gtx/spline.hpp
    inc/glm/gtx/std_based_type.hpp
    inc/glm/gtx/string_cast.hpp
    inc/glm/gtx/transform.hpp
    inc/glm/gtx/transform2.hpp
    inc/glm/gtx/type_aligned.hpp
    inc/glm/gtx/vector_angle.hpp
    inc/glm/gtx/vector_query.hpp
    inc/glm/gtx/wrap.hpp
    inc/glm/common.hpp
    inc/glm/exponential.hpp
    inc/glm/ext.hpp
    inc/glm/fwd.hpp
    inc/glm/geometric.hpp
    inc/glm/glm.hpp
    inc/glm/integer.hpp
    inc/glm/mat2x2.hpp
    inc/glm/mat2x3.hpp
    inc/glm/mat2x4.hpp
    inc/glm/mat3x2.hpp
    inc/glm/mat3x3.hpp
    inc/glm/mat3x4.hpp
    inc/glm/mat4x2.hpp
    inc/glm/mat4x3.hpp
    inc/glm/mat4x4.hpp
    inc/glm/matrix.hpp
    inc/glm/packing.hpp
    inc/glm/trigonometric.hpp
    inc/glm/vec2.hpp
    inc/glm/vec3.hpp
    inc/glm/vec4.hpp
    inc/glm/vector_relational.hpp
    inc/octree/array.h
    inc/octree/array2d.h
    inc/octree/numtraits.h
    inc/octree/octree.h
    inc/octree/point3d.h
    inc/octree/shareddata.h
    inc/octree/tinyvector.h
    inc/SDL/begin_code.h
    inc/SDL/close_code.h
    inc/SDL/SDL.h
    inc/SDL/SDL_assert.h
    inc/SDL/SDL_atomic.h
    inc/SDL/SDL_audio.h
    inc/SDL/SDL_bits.h
    inc/SDL/SDL_blendmode.h
    inc/SDL/SDL_clipboard.h
    inc/SDL/SDL_config.h
    inc/SDL/SDL_config_android.h
    inc/SDL/SDL_config_iphoneos.h
    inc/SDL/SDL_config_macosx.h
    inc/SDL/SDL_config_minimal.h
    inc/SDL/SDL_config_pandora.h
    inc/SDL/SDL_config_psp.h
    inc/SDL/SDL_config_windows.h
    inc/SDL/SDL_config_winrt.h
    inc/SDL/SDL_config_wiz.h
    inc/SDL/SDL_copying.h
    inc/SDL/SDL_cpuinfo.h
    inc/SDL/SDL_egl.h
    inc/SDL/SDL_endian.h
    inc/SDL/SDL_error.h
    inc/SDL/SDL_events.h
    inc/SDL/SDL_filesystem.h
    inc/SDL/SDL_gamecontroller.h
    inc/SDL/SDL_gesture.h
    inc/SDL/SDL_haptic.h
    inc/SDL/SDL_hints.h
    inc/SDL/SDL_image.h
    inc/SDL/SDL_joystick.h
    inc/SDL/SDL_keyboard.h
    inc/SDL/SDL_keycode.h
    inc/SDL/SDL_loadso.h
    inc/SDL/SDL_log.h
    inc/SDL/SDL_main.h
    inc/SDL/SDL_messagebox.h
    inc/SDL/SDL_mouse.h
    inc/SDL/SDL_mutex.h
    inc/SDL/SDL_name.h
    inc/SDL/SDL_opengl.h
    inc/SDL/SDL_opengl_glext.h
    inc/SDL/SDL_opengles.h
    inc/SDL/SDL_opengles2.h
    inc/SDL/SDL_opengles2_gl2.h
    inc/SDL/SDL_opengles2_gl2ext.h
    inc/SDL/SDL_opengles2_gl2platform.h
    inc/SDL/SDL_opengles2_khrplatform.h
    inc/SDL/SDL_pixels.h
    inc/SDL/SDL_platform.h
    inc/SDL/SDL_power.h
    inc/SDL/SDL_quit.h
    inc/SDL/SDL_rect.h
    inc/SDL/SDL_render.h
    inc/SDL/SDL_revision.h
    inc/SDL/SDL_rwops.h
    inc/SDL/SDL_scancode.h
    inc/SDL/SDL_shape.h
    inc/SDL/SDL_stdinc.h
    inc/SDL/SDL_surface.h
    inc/SDL/SDL_system.h
    inc/SDL/SDL_syswm.h
    inc/SDL/SDL_test.h
    inc/SDL/SDL_test_assert.h
    inc/SDL/SDL_test_common.h
    inc/SDL/SDL_test_compare.h
    inc/SDL/SDL_test_crc32.h
    inc/SDL/SDL_test_font.h
    inc/SDL/SDL_test_fuzzer.h
    inc/SDL/SDL_test_harness.h
    inc/SDL/SDL_test_images.h
    inc/SDL/SDL_test_log.h
    inc/SDL/SDL_test_md5.h
    inc/SDL/SDL_test_random.h
    inc/SDL/SDL_thread.h
    inc/SDL/SDL_timer.h
    inc/SDL/SDL_touch.h
    inc/SDL/SDL_ttf.h
    inc/SDL/SDL_types.h
    inc/SDL/SDL_version.h
    inc/SDL/SDL_video.h
    TestMesh/aabb.cpp
    TestMesh/aabb.h
    TestMesh/application.cpp
    TestMesh/application.h
    TestMesh/buffer.h
    TestMesh/camera.cpp
    TestMesh/camera.h
    TestMesh/color.h
    TestMesh/console.cpp
    TestMesh/console.h
    TestMesh/defaultFrag.frag
    TestMesh/defaultVert.vert
    TestMesh/elementBufferObject.cpp
    TestMesh/elementBufferObject.h
    TestMesh/eventArgs.h
    TestMesh/eventHandler.h
    TestMesh/eventSender.h
    TestMesh/geometry.cpp
    TestMesh/geometry.h
    TestMesh/glDebugger.cpp
    TestMesh/glDebugger.h
    TestMesh/gltfUtils.cpp
    TestMesh/gltfUtils.h
    TestMesh/guid.cpp
    TestMesh/guid.h
    TestMesh/guid_win64.cpp
    TestMesh/importer.cpp
    TestMesh/importer.h
    TestMesh/input.cpp
    TestMesh/input.h
    TestMesh/keyboardEventArgs.h
    TestMesh/keyboardEventHandler.h
    TestMesh/keycode.h
    TestMesh/main.cpp
    TestMesh/main_old.cpp
    TestMesh/material.cpp
    TestMesh/material.h
    TestMesh/mathUtils.cpp
    TestMesh/mathUtils.h
    TestMesh/mesh.cpp
    TestMesh/mesh.h
    TestMesh/mouseEventArgs.h
    TestMesh/mouseEventHandler.h
    TestMesh/octree.cpp
    TestMesh/octree.h
    TestMesh/parameterSemantic.h
    TestMesh/path.cpp
    TestMesh/path.h
    TestMesh/picojson.h
    TestMesh/primitive.cpp
    TestMesh/primitive.h
    TestMesh/program.cpp
    TestMesh/program.h
    TestMesh/programBuilder.cpp
    TestMesh/programBuilder.h
    TestMesh/programCompilationResult.h
    TestMesh/rectangle.h
    TestMesh/scancode.h
    TestMesh/scene.cpp
    TestMesh/scene.h
    TestMesh/screen.cpp
    TestMesh/screen.h
    TestMesh/shader.cpp
    TestMesh/shader.frag
    TestMesh/shader.h
    TestMesh/shader.vert
    TestMesh/shaderCompilationResult.h
    TestMesh/shadingTechnique.cpp
    TestMesh/shadingTechnique.h
    TestMesh/stb_image.h
    TestMesh/stopwatch.cpp
    TestMesh/stopwatch.h
    TestMesh/testMesh.h
    TestMesh/texture.h
    TestMesh/textureAddress.h
    TestMesh/textureContainer.cpp
    TestMesh/textureContainer.h
    TestMesh/texturesManager.cpp
    TestMesh/texturesManager.h
    TestMesh/time.cpp
    TestMesh/time.h
    TestMesh/tiny_gltf_loader.h
    TestMesh/types.h
    TestMesh/vertex.cpp
    TestMesh/vertex.h
    TestMesh/vertexArrayObject.cpp
    TestMesh/vertexArrayObject.h
    TestMesh/vertexBufferObject.cpp
    TestMesh/vertexBufferObject.h
    TestMesh/window.cpp
    TestMesh/window.h
    TestMesh/window_win64.cpp)

add_executable(testmesh ${SOURCE_FILES})